// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`KSGU Instructions should return the expected primary instructions 1`] = `
[
  "AC E",
  "AN SAINT GEORGE CLASS E2",
  "AH 17999 ft",
  "AL SFC",
  "V X=037:02:11.00 N 113:30:37.00 W",
  "DC 4.5",
]
`;

exports[`KSGU Instructions should return the expected northeast extension instructions 1`] = `
[
  "AC E",
  "AN SAINT GEORGE E4 NE",
  "AH 17999 ft",
  "AL SFC",
  "DP 037:08:20.34 N 113:24:42.65 W",
  "DP 037:09:20.23 N 113:26:52.79 W",
  "V X=037:02:11.00 N 113:30:37.00 W",
  "DA 4.5, 17.071185, 42.995148",
]
`;

exports[`KSGU Instructions should return the expected southwest extension instructions 1`] = `
[
  "AC E",
  "AN SAINT GEORGE E4 SW",
  "AH 17999 ft",
  "AL SFC",
  "DP 036:55:09.09 N 113:37:03.68 W",
  "DP 036:53:35.49 N 113:32:27.89 W",
  "V X=037:02:11.00 N 113:30:37.00 W",
  "DA 4.5, 176.585560, 229.357024",
]
`;
